<resources>
    <string name="app_name">Calculator</string>
    <string name="placeholdAns">Answer</string>
    <string name="placeholdInp">Input log</string>
    <string name="but1">1</string>
    <string name="but2">2</string>
    <string name="but3">3</string>
    <string name="but4">4</string>
    <string name="but5">5</string>
    <string name="but6">6</string>
    <string name="but7">7</string>
    <string name="but8">8</string>
    <string name="but9">9</string>
    <string name="but0">0</string>
    <string name="butdot">,</string>
    <string name="butans">=</string>
    <string name="butplus">+</string>
    <string name="butminus">-</string>
    <string name="butmult">*</string>
    <string name="butdiv">/</string>
    <string name="butclr">C</string>
    <string name="butbrL">(</string>
    <string name="butbrR">)</string>
    <string name="menuTitleCalc">Calculator</string>
    <string name="menuTitleTrans">2 → 10</string>
    <string name="menuTitleTrans2">10 → 2</string>
    <string name="menuTitleLog">Log</string>
    <string name="log_title">Solution history</string>
    <string name="logOutputHint">Solutions will be posted here</string>
    <string name="logButClr">Clear list of logs</string>
    <string name="nst_title">Translation of number systems</string>
    <string name="nst_title_2">2 → 10</string>

</resources>