<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textSize="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inplog"
        android:layout_width="357dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:hint="@string/placeholdInp"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/anslog"
        android:layout_width="353dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:hint="@string/placeholdAns"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inplog" />

    <Button
        android:id="@+id/butt1"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/but1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anslog"
        android:textSize="24sp"
        android:onClick="onClickButton"/>

    <Button
        android:id="@+id/buttplus"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickButton"
        android:text="@string/butplus"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt3"
        app:layout_constraintTop_toBottomOf="@+id/anslog" />

    <Button
        android:id="@+id/butt3"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickButton"
        android:text="@string/but3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt2"
        app:layout_constraintTop_toBottomOf="@+id/anslog" />

    <Button
        android:id="@+id/butt2"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickButton"
        android:text="@string/but2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt1"
        app:layout_constraintTop_toBottomOf="@+id/anslog" />

    <Button
        android:id="@+id/butt4"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:text="@string/but4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt1"
        android:textSize="24sp"
        android:onClick="onClickButton"/>

    <Button
        android:id="@+id/buttdot"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:text="@string/butdot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt7"
        android:textSize="24sp"
        android:onClick="onClickButton"/>

    <Button
        android:id="@+id/butt7"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:text="@string/but7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt4"
        android:textSize="24sp"
        android:onClick="onClickButton"/>

    <Button
        android:id="@+id/butt5"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/but5"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt4"
        app:layout_constraintTop_toBottomOf="@+id/butt2" />

    <Button
        android:id="@+id/butt0"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/but0"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/buttdot"
        app:layout_constraintTop_toBottomOf="@+id/butt8" />

    <Button
        android:id="@+id/butt8"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/but8"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt7"
        app:layout_constraintTop_toBottomOf="@+id/butt5" />

    <Button
        android:id="@+id/butt6"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/but6"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt5"
        app:layout_constraintTop_toBottomOf="@+id/butt3" />

    <Button
        android:id="@+id/buttans"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/butans"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt0"
        app:layout_constraintTop_toBottomOf="@+id/butt9" />

    <Button
        android:id="@+id/butt9"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/but9"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt8"
        app:layout_constraintTop_toBottomOf="@+id/butt6" />

    <Button
        android:id="@+id/buttmult"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/butmult"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt9"
        app:layout_constraintTop_toBottomOf="@+id/buttminus" />

    <Button
        android:id="@+id/buttminus"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/butminus"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt6"
        app:layout_constraintTop_toBottomOf="@+id/buttplus" />

    <Button
        android:id="@+id/buttdiv"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:onClick="onClickButton"
        android:text="@string/butdiv"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/buttans"
        app:layout_constraintTop_toBottomOf="@+id/buttmult" />

    <Button
        android:id="@+id/buttclr"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:onClick="onClickButton"
        android:text="@string/butclr"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttdot" />

</androidx.constraintlayout.widget.ConstraintLayout>