<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".actNSTto10">

    <Button
        android:id="@+id/butt10_2"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="8dp"
        android:onClick="onClickButton"
        android:text="@string/but2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_1"
        app:layout_constraintTop_toBottomOf="@+id/anslog_nst2" />

    <Button
        android:id="@+id/butt10_8"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="4dp"
        android:onClick="onClickButton"
        android:text="@string/but8"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_7"
        app:layout_constraintTop_toBottomOf="@+id/butt10_4" />

    <Button
        android:id="@+id/butt10_9"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:onClick="onClickButton"
        android:text="@string/but9"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt10_5" />

    <Button
        android:id="@+id/butt10_ans"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="4dp"
        android:onClick="onClickButton"
        android:text="@string/butans"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_0"
        app:layout_constraintTop_toBottomOf="@+id/butt10_7" />

    <Button
        android:id="@+id/butt10_4"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="8dp"
        android:onClick="onClickButton"
        android:text="@string/but4"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_3"
        app:layout_constraintTop_toBottomOf="@+id/anslog_nst2" />

    <Button
        android:id="@+id/butt10_7"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="4dp"
        android:onClick="onClickButton"
        android:text="@string/but7"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_6"
        app:layout_constraintTop_toBottomOf="@+id/butt10_3" />

    <Button
        android:id="@+id/butt10_clr"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="4dp"
        android:onClick="onClickButton"
        android:text="@string/butclr"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_ans"
        app:layout_constraintTop_toBottomOf="@+id/butt10_8" />

    <Button
        android:id="@+id/butt10_0"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="4dp"
        android:onClick="onClickButton"
        android:text="@string/but0"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_9"
        app:layout_constraintTop_toBottomOf="@+id/butt10_6" />

    <Button
        android:id="@+id/butt10_1"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickButton"
        android:text="@string/but1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anslog_nst2" />

    <Button
        android:id="@+id/butt10_5"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:onClick="onClickButton"
        android:text="@string/but5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt10_1" />

    <Button
        android:id="@+id/butt10_3"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="8dp"
        android:onClick="onClickButton"
        android:text="@string/but3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_2"
        app:layout_constraintTop_toBottomOf="@+id/anslog_nst2" />

    <Button
        android:id="@+id/butt10_6"
        android:layout_width="86sp"
        android:layout_height="82sp"
        android:layout_marginTop="4dp"
        android:onClick="onClickButton"
        android:text="@string/but6"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/butt10_5"
        app:layout_constraintTop_toBottomOf="@+id/butt10_2" />

    <TextView
        android:id="@+id/inplog_nst2"
        android:layout_width="357dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:hint="@string/placeholdInp"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nst_title_2" />

    <TextView
        android:id="@+id/anslog_nst2"
        android:layout_width="353dp"
        android:layout_height="39dp"
        android:hint="@string/placeholdAns"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inplog_nst2" />

    <TextView
    android:id="@+id/nst_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/nst_title"
    android:textSize="22sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/nst_title_2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:text="@string/menuTitleTrans2"
    android:textSize="22sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>